# docs/swagger.json
@@ -22,7 +22,7 @@
             "get": {
                 "security": [
                     {
-                        "Bearer": []
+                        "BearerAuth": []
                     }
                 ],
                 "description": "Get all accounts",
@@ -40,7 +40,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.AccountResponse"
+                            "$ref": "#/definitions/models.AccountsResponse"
                         }
                     },
                     "400": {
@@ -108,7 +108,7 @@
             "get": {
                 "security": [
                     {
-                        "Bearer": []
+                        "BearerAuth": []
                     }
                 ],
                 "description": "Get account by id",
@@ -135,7 +135,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Account"
+                            "$ref": "#/definitions/models.AccountResponse"
                         }
                     },
                     "400": {
@@ -167,39 +167,6 @@
                 }
             }
         },
-        "models.Account": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "description": "Automatically managed by GORM for creation time",
-                    "type": "string"
-                },
-                "deleted_at": {
-                    "description": "Automatically managed by GORM",
-                    "allOf": [
-                        {
-                            "$ref": "#/definitions/gorm.DeletedAt"
-                        }
-                    ]
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "token": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "description": "Automatically managed by GORM for update time",
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
         "models.AccountLoginData": {
             "type": "object",
             "properties": {
@@ -228,14 +195,8 @@
         "models.AccountResponse": {
             "type": "object",
             "properties": {
-                "accounts": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.AccountWithoutPassword"
-                    }
-                },
-                "count": {
-                    "type": "integer"
+                "account": {
+                    "$ref": "#/definitions/models.AccountWithoutPassword"
                 }
             }
         },
@@ -262,6 +223,20 @@
                 }
             }
         },
+        "models.AccountsResponse": {
+            "type": "object",
+            "properties": {
+                "accounts": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.AccountWithoutPassword"
+                    }
+                },
+                "count": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.HTTPError": {
             "type": "object",
             "properties": {
@@ -274,7 +249,7 @@
         }
     },
     "securityDefinitions": {
-        "Bearer": {
+        "BearerAuth": {
             "description": "Type \"Bearer\" followed by a space and JWT token.",
             "type": "apiKey",
             "name": "Authorization",
